# ApexForge_NightScript

./: .gitattributes  .gitignore  LANGUAGE_GUIDE.md  README.md  pyproject.toml
compiler/: Makefile  night
compiler/night/: ast.py  check.py  cli.py  codegen_c.py  lexer.py  parser.py  sema.py  token.py  typecheck.py  typesys.py
compiler/src/: main.c
compiler/src/codegen/: codegen.c  codegen.h
compiler/src/common/: arena.c  arena.h
compiler/src/lexer/: lexer.c  lexer.h  token.c  token.h
compiler/src/llvmgen/: llvmgen.c  llvmgen.h
compiler/src/parser/: ast.h  ast_dump.c  ast_dump.h  parser.c  parser.h
compiler/src/sema/: sema.c  sema.h
compiler/src/typeck/: typeck.c  typeck.h
compiler/tests/: run_tests.sh
compiler/tests/fail/: break_outside_loop.err  circular_import.err  dup_function.err  dup_struct_field.err  duplicate_match_arm.afns  duplicate_match_arm.err  enum_ctor_bad_arity.err  (+20 more)
examples/: gui_demo  gui_demo.afns  hello  hello.afns  uitest  uitest.afns  uitest_run  uitest_test
prototype/: README.md  night
prototype/tests/: conftest.py  test_lexer.py
stdlib/alloc/: buf.afns
stdlib/core/: convert.afni  convert.afns  math.afni  math.afns  mem.afni  mem.afns
stdlib/io/: print.afns
stdlib/kernel/: cpu.afns  framebuffer.afns  gdt.afns  interrupts.afns  keyboard.afns  mem.afns  mouse.afns  ports.afns  serial.afns  shell.afns  terminal.afns  timer.afns  vga.afns  wm.afns
stdlib/std/: env.afni  env.afns  fs.afni  fs.afns  io.afni  io.afns  net.afns  path.afni  path.afns  process.afni  process.afns  time.afni  time.afns
tests/: test_lexer.py
(+126 files in other folders)
